RESOLVED FIXED286278
Ignore -Wundef and -Wdeprecated-declarations in code that imports libxml and libxslt headers
https://bugs.webkit.org/show_bug.cgi?id=286278
Summary Ignore -Wundef and -Wdeprecated-declarations in code that imports libxml and ...
Andy Estes
Reported 2025-01-20 16:30:13 PST
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-20 16:30:28 PST
Andy Estes
Comment 2 2025-01-20 16:34:17 PST
EWS
Comment 3 2025-01-20 19:38:36 PST
Committed 289169@main (9e7dc1e91da1): <https://commits.webkit.org/289169@main> Reviewed commits have been landed. Closing PR #39303 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.