Ignore -Wundef and -Wdeprecated-declarations in code that imports libxml and libxslt headers https://bugs.webkit.org/show_bug.cgi?id=286278 rdar://143284673

Unreviewed build fix.

Due to a regression in the libxml2 library used by Cocoa ports, code that imports libxml and libxslt
headers will fail to compile due to -Wundef and -Wdeprecated-declarations warnings that are promoted
to errors in engineering builds. Silence these errors until the underlying libxml2 regression is
addressed.

* Source/WebCore/dom/TransformSource.h:
* Source/WebCore/dom/TransformSourceLibxslt.cpp:
* Source/WebCore/xml/XMLErrors.h:
* Source/WebCore/xml/XSLStyleSheet.h:
* Source/WebCore/xml/XSLStyleSheetLibxslt.cpp:
(WebCore::XSLStyleSheet::loadChildSheets):
(WebCore::XSLStyleSheet::locateStylesheetSubResource):
* Source/WebCore/xml/XSLTExtensions.cpp:
(WebCore::exsltNodeSetFunction):
* Source/WebCore/xml/XSLTProcessor.h:
* Source/WebCore/xml/XSLTProcessorLibxslt.cpp:
(WebCore::docLoaderFunc):
* Source/WebCore/xml/XSLTUnicodeSort.cpp:
(WebCore::xsltUnicodeSortFunction):
* Source/WebCore/xml/parser/XMLDocumentParser.h:
* Source/WebCore/xml/parser/XMLDocumentParserLibxml2.cpp:
(WebCore::PendingCallbacks::PendingStartElementNSCallback::~PendingStartElementNSCallback):
(WebCore::PendingCallbacks::PendingCharactersCallback::~PendingCharactersCallback):
(WebCore::PendingCallbacks::PendingProcessingInstructionCallback::~PendingProcessingInstructionCallback):
(WebCore::PendingCallbacks::PendingCDATABlockCallback::~PendingCDATABlockCallback):
(WebCore::PendingCallbacks::PendingInternalSubsetCallback::~PendingInternalSubsetCallback):
* Source/WebCore/xml/parser/XMLDocumentParserScope.h:
* Tools/TestWebKitAPI/Tests/WebCore/cocoa/XMLParsing.mm:

Canonical link: https://commits.webkit.org/289169@main